--- a/src/reuse.styl
+++ b/src/reuse.styl
@@ -1,3 +1,11 @@
+$red = #fa5150
+$yellow = #ffc400
+$green = #07c060
+$blue = #10aefe
+$blue2 = #1485ee
+
+$font-color = var(--font-color, black)
+
 black(opacity)
   rgba(0, 0, 0, opacity)
 
