--- a/src/index.styl
+++ b/src/index.styl
@@ -1,8 +1,10 @@
-@import '../src/reuse.styl'
+@import '@ppzp/stylus'
 
 html, body
   padding: 0
   margin 0
+html
+  font-family: auto
 
 .block
   .title
@@ -12,5 +14,5 @@ html, body
     padding: .2em 1em 0
   .content
     padding: 1rem 2rem
-  .ppz-btn
+  .btn
     margin-right: 1rem
