--- a/src/index.styl
+++ b/src/index.styl
@@ -2,17 +2,27 @@
 
 html, body
   padding: 0
-  margin 0
+  margin: 0
 html
   font-family: auto
+body
+  max-width: 1000px
+  min-height: 100vh
+  margin: 0 auto
+  shadow()
 
 .block
   .title
-    background: black(.3)
+    background: primary()
     color: #fff
-    line-height: 2
-    padding: .2em 1em 0
+    line-height: 2.5
+    padding: .2em 1.4em 0
   .content
-    padding: 1rem 2rem
+    padding: 2rem 2rem 4rem
+
+.btns
   .btn
     margin-right: 1rem
+
+.basic-body
+  padding: 1em 1.4em
