--- a/src/modal/index.styl
+++ b/src/modal/index.styl
@@ -8,10 +8,8 @@
 
 .modal
   fixed(0, 0, 0, 0)
-  background: black(.1)
+  background: text(.16)
   align-items: center
   justify-content: center
   animation: ppz-modal-show .3s
-  .content
-    min-width: 1em
-    min-height: 1em
+  font-size: 1rem
