--- a/src/modal/index.styl
+++ b/src/modal/index.styl
@@ -8,7 +8,7 @@
 
 .modal
   fixed(0, 0, 0, 0)
-  background: text(.16)
+  background: text(a: .16)
   align-items: center
   justify-content: center
   animation: ppz-modal-show .3s
