--- a/src/dialog/index.styl
+++ b/src/dialog/index.styl
@@ -5,13 +5,14 @@
   min-width: 26rem // 既然是 最小 当然要看起来小一点
   border-radius: 1rem
   overflow: hidden
+  shadow()
 
 .dialog-header
   font-weight: 600
-  padding: 1rem 1.4rem .9rem
+  padding: 1.2rem 1.6rem 1rem
   border-bottom: textBorder()
 .dialog-footer
-  padding: 1 1.4rem
+  padding: 1rem 1.6rem
   text-align: right
   .btn
     margin: 0 .3rem
