--- a/src/index.styl
+++ b/src/index.styl
@@ -5,24 +5,28 @@ html, body
   margin: 0
 html
   font-family: auto
+  background: text(a: .02)
+*
+  box-sizing: border-box
 body
   max-width: 1000px
   min-height: 100vh
   margin: 0 auto
   shadow()
+  background: n-text()
 
 .block
   .title
-    background: primary()
-    color: #fff
+    background-color: text(a: .02)
+    font-weight: 600
     line-height: 2.5
     padding: .2em 1.4em 0
   .content
-    padding: 2rem 2rem 4rem
-
+    padding: 2rem 2rem 2rem
+    min-height: 130px
 .btns
   .btn
-    margin-right: 1rem
+    margin: 0 1rem 1rem
 
 .basic-body
-  padding: 1em 1.4em
+  padding: 1em 1.6em
