--- a/src/modal/index.styl
+++ b/src/modal/index.styl
@@ -9,7 +9,9 @@
 .modal
   fixed(0, 0, 0, 0)
   background: text(a: .16)
-  align-items: center
-  justify-content: center
   animation: ppz-modal-show .3s
   font-size: 1rem
+  align-items: flex-start
+  &.center
+    align-items: center
+    justify-content: center
