--- a/src/dialog/index.styl
+++ b/src/dialog/index.styl
@@ -12,8 +12,8 @@
   padding: 1.2rem 1.6rem 1rem
   border-bottom: textBorder()
 .dialog-footer
-  padding: 1rem 1.6rem
+  padding: 1rem 1.6rem 1.2rem
   text-align: right
   .btn
-    margin: 0 .3rem
+    margin: 0 .5rem
     
